Adicionado o x-constraints para adicionar a validação do enum via annotation
